# aoc2016-py

./: .gitignore  main.py  pyproject.toml  run.sh
days/: __init__.py
days/day1/: __init__.py
days/day10/: __init__.py
days/day11/: __init__.py
days/day12/: __init__.py
days/day13/: __init__.py
days/day14/: __init__.py
days/day2/: __init__.py
days/day3/: __init__.py
days/day4/: __init__.py
days/day5/: __init__.py
days/day6/: __init__.py
days/day7/: __init__.py
days/day8/: __init__.py
days/day9/: __init__.py
