[tool.poetry]
name = "aoc2016-py"
version = "0.1.0"
description = ""
authors = ["dementati <ztargaser@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
