[project]
name = "aoc2016-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "demapples",
    "icecream>=2.1.8",
    "numpy>=2.3.5",
    "pytest>=9.0.2",
]

[tool.uv.sources]
demapples = { git = "https://github.com/dementati/demapples.git" }
